--- a/templates/box-feature.html
+++ b/templates/box-feature.html
@@ -3,8 +3,8 @@
                   <td class="spacer" style="border-collapse: collapse;font-size: 1px;line-height: 1;padding-top: 25px;"> </td>
                 </tr>
                 <tr>
-                  <td align="left" style="border-collapse: collapse; border-left:{{ item["border_width"]}} solid {{ item["outline_color"]}}; border-right: {{ item["border_width"]}} solid {{ item["border_color"]}}; border-top: {{ item["border_width"] }} solid {{ item["border_color"] }}; background-color: {{ item['background_color'] }};padding-top: 15px;padding-right: 20px;padding-left: 20px;padding-bottom: 15px; {{ item['top_extra_box_style' ]}}">
-                    <h1 style="mso-line-height-rule: exactly;font-size: 21px;font-weight: {{ item['header_font_weight']}};line-height: 23px;color: {{ item['text_color'] }};margin: 0;padding: 0;">{{ item ['callout'] }}</h1>
+                  <td align="left" style="border-collapse: collapse; border-left: {{ item['border_width'] }} solid {{ item['outline_color'] }}; border-right: {{ item['border_width'] }} solid {{ item['border_color'] }}; border-top: {{ item['border_width'] }} solid {{ item['border_color'] }}; background-color: {{ item['background_color'] }};padding-top: 15px;padding-right: 20px;padding-left: 20px; padding-bottom: 15px; {{ item['top_extra_box_style' ]}};">
+                    <span style="mso-line-height-rule: exactly;font-family: {{item['callout_font_family']}}; font-size: {{item['callout_font_size']}};font-weight: {{ item['callout_font_weight']}};line-height: 23px;color: {{ item['callout_text_color'] }};margin: 0;padding: 0;">{{item['callout']}}</span>
                   </td>
                 </tr>
                 <tr>
@@ -12,11 +12,11 @@
                     <!--[if mso]>
             <table border="0" cellpadding="0" cellspacing="0" width="100%">
             <tr><td width="35%" valign="top"><![endif]-->
-              <table align="left" border="0" cellpadding="0" cellspacing="0" class="force-row" style="border-spacing: 0;mso-table-lspace: 0pt;mso-table-rspace: 0pt;" width="290">
+              <table align="left" border="0" cellpadding="0" cellspacing="0"  style="border-spacing: 0;mso-table-lspace: 0pt;mso-table-rspace: 0pt;width: 50%;" width="50%">
                 <tbody>
                   <tr>
-                    <td class="padt20 padr10 padl20 padb5" style="border-collapse: collapse;padding-top: 20px;padding-right: 10px;padding-bottom: 5px;padding-left: 20px;" valign="top">
-                      <p style="font-family: '{{ item['font_family'] }}'; font-size: {{ item['main_font_size']}};line-height: 23px;font-weight: {{ item['font_weight']}};color: {{ item['text_color']}};padding: 0;margin: 0;margin-bottom: 15px;">
+                    <td style="border-collapse: collapse;padding-top: 20px;padding-right: 10px;padding-bottom: 5px;padding-left: {{item['image_padding_left']}};" valign="top">
+                      <p style="padding: 0;margin: 0;margin-bottom: 15px;">
                         <a href='{{ item['link_ref']}}'><img src="{{item['image_url']}}" alt="⊂(◉‿◉)つ" width="auto" height="auto" style="-ms-interpolation-mode: bicubic;display: block;max-height: 900px;max-width: 900px;width: 100%; border-radius: 0.8rem;"></a>
                       </p>
                     </td>
@@ -25,18 +25,18 @@
               </table>
 
                     <!--[if mso]></td><td width="65%" valign="top"><![endif]-->
-                    <table align="right" border="0" cellpadding="0" cellspacing="0" class="force-row" style="border-spacing: 0;mso-table-lspace: 0pt;mso-table-rspace: 0pt;" width="360">
+                    <table align="right" border="0" cellpadding="0" cellspacing="0" class="force-row" style="border-spacing: 0;mso-table-lspace: 0pt;mso-table-rspace: 0pt; width: 50%;">
                       <tbody>
                         <tr>
                           <td class="padt15 padr20 padl10 padb0 mobt0" style="border-collapse: collapse;padding-top: 15px;padding-right: 10px;padding-bottom: 15px;padding-left: 10px;" valign="top">
-                            <h2 style="mso-line-height-rule: exactly;font-size: 15px;line-height: 23px;font-weight: 600;color:{{ item['light_text_color'] }};margin: 0;padding: 0 0 5px 0;">
+                            <h2 style="mso-line-height-rule: exactly;font-size: 15px;line-height: 23px;font-weight: 600; color:{{ item['subtitle_text_color'] }};margin: 0;padding: 0 0 5px 0;">
                               <a href="{{ item['link_ref']}}" style="text-decoration: underline;color:{{ item['text_color'] }} !important;">{{ item['link_text_1']}}</a> →</h2>
                             <p style="font-family: '{{ item['subtitle_font_family'] }}'; font-style: '{{ item['subtitle_font_style'] }}';font-size: 14px;line-height: 15px;font-weight:  '{{ item['subtitle_font_weight']}}';color: {{ item['light_text_color'] }};padding: 0;margin: 0;">{{ item['subtitle'] }}</p>
-                            <p style="text-align: center; font-size: 15px;">{{item["value_prop"]}}</p>
+                            <p style="text-align: center; font-size: 15px;">{{item['value_prop']}}</p>
                                 <p style="font-size: 15px;font-weight: {{ item['font_weight']}};color: {{ item['text_color'] }};padding: 0;margin: 0;margin-bottom: 14px;">
                               {{ item['main_copy']}}
                             </p>
-                            <p class="small grey" style="font-size: 15px;line-height: 16px;font-weight: '{{ item['font_weight']}}';color: {{ item['background_color'] }} !important;padding: 0;margin: 0;margin-bottom: 15px;"><a href="{{ item['link_ref']}}" style="text-decoration: underline;text-align: right;display: inline-block; float: left;color: {{ item['text_color'] }} !important;">{{ item['link_text_2']}}</a></p>
+                            <p class="small grey" style="font-size: 15px;line-height: 16px;font-weight: '{{ item['font_weight']}}';color: {{ item['background_color'] }} !important;padding: 0;margin: 0;margin-bottom: 15px;"><a href="{{ item['link_ref_2']}}" style="text-decoration: underline;text-align: right;display: inline-block; float: left;color: {{ item['text_color'] }} !important;">{{ item['link_text_2']}}</a></p>
                           </td>
                         </tr>
                       </tbody>
