--- a/templates/featured-item.html
+++ b/templates/featured-item.html
@@ -7,8 +7,8 @@
         <table align="right" border="0" cellpadding="0" cellspacing="0" class="force-row" style="border-spacing: 0;mso-table-lspace: 0pt;mso-table-rspace: 0pt;" width="320">
             <tbody>
               <tr>
-                <td class="padt15 padr20 padl10" style="border-collapse: collapse;padding-top: 15px;padding-right: 20px;padding-left: 10px;" valign="top">
-                  <p style="font-family: '{{ item['font_family'] }}'; font-style:'{{ item['font_style'] }}'; font-size: 16px;line-height: 23px;font-weight: 400;color: {{ item['text_color'] }};padding: 0;margin: 0;margin-bottom: 15px;">
+                <td style="border-collapse: collapse;padding-top: 15px;padding-right: 20px;padding-left: 10px;" valign="top">
+                  <p style="font-family: {{ item['font_family'] }}; font-style:'{{ item['font_style'] }}'; font-size: 16px;line-height: 23px;font-weight: 400;color: {{ item['text_color'] }};padding: 0;margin: 0;margin-bottom: 15px;">
                     <img src="{{ item['image_url']}}" alt="⊂(◉‿◉)つ" width="290" height="auto" style="-ms-interpolation-mode: bicubic;display: block;max-height: 900px;max-width: 416px;width: 100%;">
                   </p>
                 </td>
@@ -20,11 +20,11 @@
           <table align="left" border="0" cellpadding="0" cellspacing="0" class="force-row" style="border-spacing: 0;mso-table-lspace: 0pt;mso-table-rspace: 0pt;" width="320">
             <tbody>
               <tr>
-                <td class="padt15 padr10 padl20 mobt0" style="border-collapse: collapse;padding-top: 15px;padding-right: 10px;padding-left: 20px;" valign="top">
-                  <h2 class="padb5" style="mso-line-height-rule: exactly;font-size: 16px;line-height: 23px;font-weight: 600;color: #000000;margin: 0;padding: 0 0 15px 0;padding-bottom: 5px;">
+                <td style="border-collapse: collapse; margin-top: 0px; padding-top: 5px;padding-right: 10px;padding-left: 10px;" valign="top">
+                  <h2 style="mso-line-height-rule: exactly;font-size: 16px;line-height: 23px;font-weight: 600;color: #000000;margin: 0;padding: 0 0 5px 0">
                     <a href="{{ item['link_ref']}}" style="text-decoration: underline;color:{{ item['text_color'] }} !important;">{{ item['title']}}</a></h2>
                   <h3 style="mso-line-height-rule: exactly;font-size: 16px;line-height: 23px;font-weight: 400;margin: 0;padding: 0 0 5px 0;color: {{ item['light_text_color']}} !important;">{{ item['subtitle']}}</h3>
-                  <p style="font-family: '{{ item['font_family'] }}';  '{{ item['font_style'] }}; font-size: {{item['main_font_size']}};line-height: 20px;font-weight: 400;color:{{ item['text_color' ]}};padding: 0;margin: 0;margin-bottom: 15px;">{{ item['main_copy'] }}<br>
+                  <p style="font-family: {{ item['font_family'] }};  '{{ item['font_style'] }}; font-size: {{item['main_font_size']}};line-height: 20px;font-weight: 400;color:{{ item['text_color' ]}};padding: 0;margin: 0;margin-bottom: 15px;">{{ item['main_copy'] }}<br>
                     <a href="{{ item['link_ref'] }}" style="text-decoration: underline;color:{{ item['text_color' ]}} !important;">Read More</a> ⇒</p>
                 </td>
               </tr>
