--- a/templates/image-feature.html
+++ b/templates/image-feature.html
@@ -5,7 +5,7 @@
           <tbody>
             <tr>
               <td class="padt15 padr20 padl10" style="border-collapse: collapse;padding-top: 15px; padding-bottom: 15px; padding-right: 10px;padding-left: 10px;" valign="top">
-                  <img src="{{ item['image_url']}}" alt="⊂(◉‿◉)つ"" width="600px" height="auto" style="-ms-interpolation-mode: bicubic;display: block;max-height: 900px;max-width: 600px;width: 100%; border-radius: 0.8rem;">
+                  <img src="{{ item['image_url']}}" alt="⊂(◉‿◉)つ"" width="600px" height="auto" style="-ms-interpolation-mode: bicubic; max-width: 100%; height: auto; display: block; border-radius: 0.8rem;">
               </td>
             </tr>
           </tbody>
