--- a/templates/image-right.html
+++ b/templates/image-right.html
@@ -1,40 +1,35 @@
-
-                <!-- start image-right.html-->
-                <tr>
-                  <td align="left" style=" padding-bottom: 15px; background-color: {{item['background_color']}}; border-collapse: collapse;">
-
-                    <!--[if mso]>
-              <table border="0" cellpadding="0" cellspacing="0" width="100%">
-              <tr><td width="50%" valign="top"><![endif]-->
-                    <table align="right" border="0" cellpadding="0" cellspacing="0" class="force-row" style="border-spacing: 0;mso-table-lspace: 0pt;mso-table-rspace: 0pt;" width="300">
-                      <tbody>
-                        <tr>
-                          <td class="padt15 padr20 padl10" style="border-collapse: collapse;padding-top: 15px;padding-right: 20px;padding-left: 10px; background-color: {{item['background_color']}}" valign="top">
-                            <p style="font-family: '{{ item['font_family'] }}'; font-style: {{ item['font_style'] }}; font-weight: {{ item['font_weight']}}; font-size: 16px; line-height: 18px;color: {{ item['text-color']}};padding: 0;margin: 0;margin-bottom: 15px;">
-                              <a href="{{ item['link_ref']}}"><img src="{{ item['image_url']}}" alt="⊂(◉‿◉)つ" width="290" height="auto" style="-ms-interpolation-mode: bicubic;display: block;max-height: 900px;max-width: 416px;width: 100%; border-radius: 0.8rem;"></a>
-                            </p>
-                          </td>
-                        </tr>
-                      </tbody>
-                    </table>
-
-                    <!--[if mso]></td><td width="50%" valign="top"><![endif]-->
-                    <table align="left" border="0" cellpadding="0" cellspacing="0" class="force-row" style="border-spacing: 0;mso-table-lspace: 0pt;mso-table-rspace: 0pt;" width="360">
-                      <tbody>
-                        <tr>
-                          <td class="padt15 padr10 padl20 mobt0" style="border-collapse: collapse;padding-top: 15px;padding-right: 10px;padding-left: 20px; background-color: {{item['background_color']}}" valign="top">
-                            <p class="padb5" style="mso-line-height-rule: exactly;font-family: '{{ item['font_family'] }}'; font-size: 16px;line-height: 23px;font-weight: 600;color: #000000;margin: 0;padding: 0 0 15px 0;padding-bottom: 5px;">
-                              <a href="{{ item['link_ref']}}" style="text-decoration: underline;color: #000000 !important;">{{ item['name']}}
-                              </a> ↻</p>
-                              <p class="padb5" style="mso-line-height-rule: exactly;font-family: '{{ item['font_family'] }}'; font-size: 15x;line-height: 19px;font-weight: {{item['font_weight']}};color: #000000;margin: 0;padding: 0 0 15px 0;padding-bottom: 5px;">{{ item['main_copy']}}</p>
-                          </td>
-                        </tr>
-                      </tbody>
-                    </table>
-
-                    <!--[if mso]></td></tr></table><![endif]-->
-                  </td>
-                </tr>
-
-
-                <!-- end image-right.html-->
+<!-- start image-right.html-->
+<tr>
+  <td align="left" style="padding-bottom: 15px; background-color: {{item['background_color']}}; border-collapse: collapse;">
+    <!-- Main container table -->
+    <table border="0" cellpadding="0" cellspacing="0" width="100%" style="border-spacing: 0;">
+      <tr>
+        <!-- Text content (LEFT side) -->
+        <td width="50%" valign="top" style="border-collapse: collapse; padding: 0;">
+          <table border="0" cellpadding="0" cellspacing="0" width="100%" style="border-spacing: 0;">
+            <tr>
+              <td style="border-collapse: collapse;padding-top: 15px;padding-right: 10px;padding-left: 20px; background-color: {{item['background_color']}}" valign="top">
+                <p class="padb5" style="mso-line-height-rule: exactly;font-family: {{ item['font_family'] }}; font-size: 16px;line-height: 23px;font-weight: 600;color: #000000;margin: 0;padding: 0 0 15px 0;padding-bottom: 5px;">
+                  <a href="{{ item['link_ref']}}" style="text-decoration: underline;color: #000000 !important;">{{ item['title']}}
+                  </a> ↻</p>
+                <p class="padb5" style="mso-line-height-rule: exactly;font-family: {{ item['font_family'] }}; font-size: 15px;line-height: 19px;font-weight: {{item['font_weight']}};color: #000000;margin: 0;padding: 0 0 15px 0;padding-bottom: 5px;">{{ item['main_copy']}}</p>
+              </td>
+            </tr>
+          </table>
+        </td>
+        
+        <!-- Image content (RIGHT side) -->
+        <td width="50%" valign="top" style="border-collapse: collapse; padding: 0;">
+          <table border="0" cellpadding="0" cellspacing="0" width="100%" style="border-spacing: 0;">
+            <tr>
+              <td style="border-collapse: collapse;padding-top: 15px;padding-right: 20px;padding-left: 10px; background-color: {{item['background_color']}}" valign="top">
+                <a href="{{ item['link_ref']}}"><img src="{{ item['image_url']}}" alt="⊂(◉‿◉)つ" width="100%" style="-ms-interpolation-mode: bicubic;display: block;border-radius: 0.8rem;"></a>
+              </td>
+            </tr>
+          </table>
+        </td>
+      </tr>
+    </table>
+  </td>
+</tr>
+<!-- end image-right.html-->
