--- a/templates/member-feature-item.html
+++ b/templates/member-feature-item.html
@@ -10,7 +10,7 @@
                       <tbody>
                         <tr>
                           <td class="padt15 padr20 padl10" style="border-collapse: collapse;padding-top: 15px;padding-right: 20px;padding-left: 10px; background-color: {{item['background_color']}}" valign="top">
-                            <p style="font-family: '{{ item['font_family'] }}'; font-style: {{ item['font_style'] }}; font-weight: {{ item['font_weight']}}; font-size: 16px; line-height: 18px;color: {{ item['text-color']}};padding: 0;margin: 0;margin-bottom: 15px;">
+                            <p style="font-family: {{ item['font_family'] }}; font-style: {{ item['font_style'] }}; font-weight: {{ item['font_weight']}}; font-size: 16px; line-height: 18px;color: {{ item['text_color']}};padding: 0;margin: 0;margin-bottom: 15px;">
                               <img src="{{ item['image_url']}}" alt="⊂(◉‿◉)つ" width="290" height="auto" style="-ms-interpolation-mode: bicubic;display: block;max-height: 900px;max-width: 416px;width: 100%; border-radius: 0.8rem;">
                             </p>
                           </td>
@@ -24,7 +24,7 @@
                         <tr>
                           <td class="padt15 padr10 padl20 mobt0" style="border-collapse: collapse;padding-top: 15px;padding-right: 10px;padding-left: 10px; background-color: {{item['background_color']}}" valign="top">
                             <p class="padb5" style="mso-line-height-rule: exactly;font-size: 16px;line-height: 23px;font-weight: 600;color: #000000;margin: 0;padding: 0 0 15px 0;padding-bottom: 5px;">
-                              <a href="{{ item['link_ref']}}" style="text-decoration: underline;color: #000000 !important;">{{ item['name']}}
+                              <a href="{{ item['link_ref']}}" style="text-decoration: underline;color: #000000 !important;">{{ item['title']}}
                               </a> ↻</p>{{ item['subtitle']}}
                           </td>
                         </tr>
@@ -43,9 +43,9 @@
                     <table border="0" cellpadding="0" cellspacing="0" class="force-row" style="border-spacing: 0;mso-table-lspace: 0pt;mso-table-rspace: 0pt;" >
                       <tbody>
                         <tr>
-                          <td class="padt15 padr10 padl20 mobt0" style="border-collapse: collapse;padding-top: 15px;padding-right: 10px;padding-left: 10px; background-color: {{item['background_color']}}" valign="top">
-                            <h2 class="padb5" style="mso-line-height-rule: exactly;font-size: 16px;line-height: 23px;font-weight: 600;color: #000000;margin: 0;padding: 0 0 15px 0;padding-bottom: 5px;">
-                            <p style="font-family: '{{ item['font_family'] }}'; font-style: {{ item['font-style'] }}; font-weight: {{ item['font_weight']}}; font-size: 15px;line-height: 18px; color: #000000;padding: 0;margin: 0;margin-bottom: 15px;">{{item['main_copy']}}</p><p style="font-size: 15px;line-height: 15px;font-weight: 400;color: #000000;padding: 0;margin: 0;margin-bottom: 15px;">Let's grow the network.<br>Connect with <a href="{{ item['link_ref']}}" style="text-decoration: underline;color:{{ item['text_color']}} !important;">{{ item['first_name'] }}↗</a>.</p>
+                          <td style="border-collapse: collapse;padding-top: 15px;padding-right: 10px;padding-left: 10px; background-color: {{item['background_color']}}" valign="top">
+                            <h2 style="mso-line-height-rule: exactly;font-size: 16px;line-height: 23px;font-weight: 600;color: #000000;margin: 0;padding: 0 0 15px 0;padding-bottom: 5px;">
+                            <p style="font-family: {{ item['font_family'] }}; font-style: {{ item['font_style'] }}; font-weight: {{ item['font_weight']}}; font-size: 15px;line-height: 18px; color: #000000;padding: 0;margin: 0;margin-bottom: 15px;">{{item['main_copy']}}</p><p style="font-size: 15px;line-height: 15px;font-weight: 400;color: #000000;padding: 0;margin: 0;margin-bottom: 15px;">Let's grow the network.<br>Connect with <a href="{{ item['connect_link_ref']}}" style="text-decoration: underline;color:{{ item['text_color']}} !important;">{{ item['first_name'] }}↗</a>.</p>
                           </td>
                         </tr>
                       </tbody>
