--- a/templates/static/top.html
+++ b/templates/static/top.html
@@ -42,6 +42,13 @@
     font-variation-settings: "wght" 400;
   }
   @font-face {
+  src: url('https://nearfuturelaboratory.com/fonts/formadjr/FormaDJRUI-Bold.woff2') format("woff2"),
+       url('/fonts/formadjr/FormaDJRUI-Bold.woff') format("woff");
+  font-family: 'FormaDJRUI';
+  font-style: normal;
+  font-weight: bold;
+}
+  @font-face {
     src: url('https://nearfuturelaboratory.com/fonts/warbler/WarblerTextV1.2-Regular.woff2') format("woff2"),
     url('https://nearfuturelaboratory.com/fonts/warbler/WarblerTextV1.2-Regular.woff') format("woff");
     font-family: 'WarblerText';
@@ -76,9 +83,16 @@
 }
 
 @font-face {
-  src: url('https://nearfuturelaboratory.com//fonts/roslindale/RoslindaleVariable[opsz,slnt,wdth,wght].woff2') format("woff2"),
-       url('https://nearfuturelaboratory.com//fonts/roslindale/RoslindaleVariable[opsz,slnt,wdth,wght].woff') format("woff");
+  src: url('https://nearfuturelaboratory.com/fonts/roslindale/RoslindaleVariable[opsz,slnt,wdth,wght].woff2') format("woff2"),
+       url('https://nearfuturelaboratory.com/fonts/roslindale/RoslindaleVariable[opsz,slnt,wdth,wght].woff') format("woff");
   font-family: 'RoslindaleVariable';
+}
+
+@font-face {
+  font-family: "ChicagoKare";
+  font-weight: 400;
+  font-style: normal;
+  src: url('https://nearfuturelaboratory.com/fonts/chicagokare-regular/ChicagoKare-Regular.woff2') format('woff2');
 }
   
 </style>
@@ -95,33 +109,7 @@
     width: 100% !important;
     max-width: 100% !important;
     }
-    .header {
-      width: 100% !important;
-      max-width: 100% !important;
-      padding-left: 10px !important;
-      padding-right: 10px !important;
-    }
-    .padl20 {
-      padding-left: 12px !important
-    }
-    .padr20 {
-      padding-right: 12px !important
-    }
-    .padl10 {
-      padding-left: 12px !important
-    }
-    .padr10 {
-      padding-right: 12px !important
-    }
-    .padt20 {
-      padding-top: 12px !important
-    }
-    .mobt0 {
-      padding-top: 0 !important
-    }
-    .mobb15 {
-      margin-bottom: 15px !important
-    }
+    
     .headline {
       padding-left: 12px !important;
       padding-right: 12px !important;
@@ -208,18 +196,25 @@
   }
 </style>
 </head>
-<body  style="margin: 0;padding: 0;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;font-family: -apple-system,system-ui,BlinkMacSystemFont,'Segoe UI',sans-serif;">
+<body style="margin: 0;padding: 0;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;font-family: -apple-system,system-ui,BlinkMacSystemFont,'Segoe UI',sans-serif;">
   
+  <div style="margin:0 auto;max-width:600px;width:100%;">
   <!-- HEADER -->
-
+  <table border="0" cellpadding="0" cellspacing="0" width="100%" style="background-color: #ffffff; border-spacing: 0;mso-table-lspace: 0pt;mso-table-rspace: 0pt;">
+    <tr>
+      <td align="center" style="padding: 15px 0;">
+        <img src="https://nearfuturelaboratory.com/images/site/logos/LaboratoryCircle_Guy_01_CircleTeal_200px.png" alt="Near Future Laboratory" width="120" style="-ms-interpolation-mode: bicubic; border: 0; display: block;">
+      </td>
+    </tr>
+  </table>
       
-      <!-- BODY -->
-      <table border="0" cellpadding="0" cellspacing="0" style="background-color: #ffffff; border-spacing: 0;mso-table-lspace: 0pt;mso-table-rspace: 0pt;" width="100%">
-        <tbody>            
-            <tr>
-              <td align="center" style="padding-bottom: 15px; background-color: #FFFFFF;border-collapse: collapse;" valign="top">
-                
-                <!-- 660px container (white background) -->
-                <table border="0" cellpadding="0" cellspacing="0" class="body" style="border-spacing: 0;mso-table-lspace: 0pt;mso-table-rspace: 0pt;width: 660px;max-width: 660px;">
-                  <tbody>
-                    <!-- end top.html -->
+  <!-- BODY -->
+  <table border="0" cellpadding="0" cellspacing="0" class="body" style="border-spacing: 0;mso-table-lspace: 0pt;mso-table-rspace: 0pt;width: 600px;max-width: 600px;table-layout: fixed;margin: 0 auto;">    <tbody>            
+      <tr>
+        <td align="center" style="margin-bottom: 15px; background-color: #FFFFFF;border-collapse: collapse;" valign="top">
+          
+          <!-- 600px container (white background) -->
+          <table border="0" cellpadding="0" cellspacing="0" class="body" style="border-spacing: 0;mso-table-lspace: 0pt;mso-table-rspace: 0pt;width: 600px;max-width: 600px;">
+            <tbody>
+
+              <!-- end top.html -->
