--- a/templates/top-quote.html
+++ b/templates/top-quote.html
@@ -8,9 +8,9 @@
           <tbody>
             <tr>
               <td style="border-collapse: collapse;padding-top: 15px;padding-right: 10px;padding-bottom: 5px;padding-left: 0px;" valign="top">
-                <p class="marb5" style="font-family:'FormaDJRVariable'; font-variation-settings: 'wght' 900;font-size: 22px;line-height: 20px;color: #000000;padding: 0;margin: 0;margin-bottom: 5px;">
+                <p  style="font-family:FormaDJRUI, Roboto, Monaco, sans-serif; font-variation-settings: 'wght' 900;font-size: 22px;line-height: 20px;color: #000000;padding: 0 10px ;margin: 0;margin-bottom: 5px;">
                   <!-- QUOTE -->
-                  Imagination<br>Precedes<br> Inspiration<br>Precedes <br>Innovation
+                  {{ item['quote'] }}
                 </p>
                 <!-- <p class="marb0" style="font-size: 16px;line-height: 23px;font-weight: 400;color: #000000;padding: 0;margin: 0;margin-bottom: 0;">
                   <b style="font-weight: 600;"></b> -->
